Cleaned up white space.